Step 3: Address Deprecated URL Constructor Usage. Build status: Success